--- a/pagina/pagina/nbproject/project.properties
+++ b/pagina/pagina/nbproject/project.properties
@@ -79,6 +79,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=miercoles25-04.war
+war.name=pagina.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
